--- a/sciquiz.html
+++ b/sciquiz.html
@@ -1,14 +1,10 @@
 <head>
-  <title>sciquiz</title>
+  <title>Sciquiz</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+    <div id="render-target">
+        
+    </div>
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
